--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dean's List - Curated tech wonders and creative sparks">
-    <meta name="keywords" content="technology, game development, software development, crypto">
+    <meta name="description" content="Dean's List - Curated tech wonders and creative sparks for developers and tech enthusiasts">
+    <meta name="keywords" content="technology, game development, software development, crypto, programming resources">
     <meta name="author" content="William Sutton">
     <title>Dean's List - Curated Tech Wonders</title>
     <link rel="stylesheet" href="styles.css">
@@ -17,7 +17,7 @@
             <nav class="creator-links">
                 <a href="https://patreon.com/yourpatreon" class="creator-patron" aria-label="Support my curation on Patreon">
                     Support My Curation
-                    <span class="pixel-arrow">➔</span>
+                    <span class="pixel-arrow" aria-hidden="true">➔</span>
                 </a>
             </nav>
         </div>
@@ -26,7 +26,8 @@
 
     <main class="content-grid">
         <!-- Presence Widget -->
-        <section class="presence-widget pixel-box">
+        <section class="presence-widget pixel-box" aria-labelledby="presence-widget-title">
+            <h2 id="presence-widget-title" class="visually-hidden">Visitor Counter</h2>
             <div class="counter-display">
                 <span class="counter-number" id="visitor-count">0000</span>
                 <span class="counter-label">curious explorers passed through</span>
@@ -37,243 +38,45 @@
         </section>
 
         <!-- Category Tags -->
-        <div class="categories-tags">
-            <button class="category-tag" data-category="opinion-pieces">Opinion Pieces</button>
-            <button class="category-tag" data-category="software">Software</button>
-            <button class="category-tag" data-category="crypto">Crypto</button>
-            <button class="category-tag" data-category="programming">Programming</button>
-            <button class="category-tag" data-category="game-dev">Game Dev</button>
-            <button class="category-tag" data-category="topics">Topics</button>
+        <div class="categories-tags" role="tablist" aria-label="Resource Categories">
+            <button class="category-tag" role="tab" data-category="opinion-pieces" aria-selected="true" aria-controls="opinion-pieces">Opinion Pieces</button>
+            <button class="category-tag" role="tab" data-category="software" aria-selected="false" aria-controls="software">Software</button>
+            <button class="category-tag" role="tab" data-category="crypto" aria-selected="false" aria-controls="crypto">Crypto</button>
+            <button class="category-tag" role="tab" data-category="programming" aria-selected="false" aria-controls="programming">Programming</button>
+            <button class="category-tag" role="tab" data-category="game-dev" aria-selected="false" aria-controls="game-dev">Game Dev</button>
+            <button class="category-tag" role="tab" data-category="topics" aria-selected="false" aria-controls="topics">Topics</button>
         </div>
 
         <!-- Category Content Container -->
         <div class="category-content-container">
             <!-- Opinion Pieces -->
-            <div class="category-content" id="opinion-pieces">
-                <article class="resource-card">
-                    <h3>Hbomberguy</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Essays</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/@hbomberguy" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Internet Culture Deep Dives
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Where I learned video essays can weaponize humor for social commentary.</p>
-                </article>
+            <div class="category-content" id="opinion-pieces" role="tabpanel" aria-labelledby="opinion-pieces-tab">
+                <!-- Content loaded dynamically -->
             </div>
 
             <!-- Software -->
-            <div class="category-content" id="software">
-                <article class="resource-card">
-                    <h3>t3dotgg (Theo)</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/@t3dotgg" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Full Stack TypeScript Development
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Known for tutorials on TypeScript and tools like t3 stack.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>ThePrimeagen</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/c/theprimeagen" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Programming with Rust, Vim, and TypeScript
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Software engineer sharing insights on programming and tools.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>Funfunfunction (MPJ)</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/c/funfunfunction" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        JavaScript and Functional Programming
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Engaging tutorials on JavaScript and web development.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>Methmethmethod</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/c/MethMethMethod" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Coding Concepts and Web Development
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Explains coding concepts and JavaScript in an engaging way.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>TheCodingTrain (Daniel Shiffman)</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/c/TheCodingTrain" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Creative Coding with JavaScript and p5.js
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Perfect for beginners, teaching creative coding.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>Austin Griffith</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/channel/UC_HI2i2peo1A-STdG22GFsA" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Ethereum Development and Web3
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Helps developers build on web3 with Scaffold-Eth.</p>
-                </article>
+            <div class="category-content" id="software" role="tabpanel" aria-labelledby="software-tab">
+                <!-- Content loaded dynamically -->
             </div>
 
             <!-- Crypto -->
-            <div class="category-content" id="crypto">
-                <article class="resource-card">
-                    <h3>What is Bitcoin?</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">Official Website</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://bitcoin.org/en/how-it-works" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Bitcoin How It Works
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Official guide to Bitcoin and its technology.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>What is Ethereum?</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">Official Website</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://ethereum.org/en/what-is-ethereum/" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Ethereum What Is
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Intro to Ethereum and decentralized tech.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>SHIB</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">Official Website</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://shibatoken.com/" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Shiba Token Website
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Shiba Inu coin and its ecosystem.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>Vitalik Buterin</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">Personal Website</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://vitalik.ca/" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Vitalik Buterin Website
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Ethereum co-founder’s insights on blockchain.</p>
-                </article>
+            <div class="category-content" id="crypto" role="tabpanel" aria-labelledby="crypto-tab">
+                <!-- Content loaded dynamically -->
             </div>
 
             <!-- Programming -->
-            <div class="category-content" id="programming">
-                <article class="resource-card">
-                    <h3>ChiliTomatoNoodle</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/channel/UCsyHonfwHi4fLb2lkq0DEAA" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        C++ and Game Development Tutorials
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">C++ and DirectX tutorials for game dev.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>ThinMatrix</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/user/ThinMatrix" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Indie Game Dev and OpenGL
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Devlogs and OpenGL game engine tutorials.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>DerekBanas</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Channel</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/user/derekbanas" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Comprehensive Programming Tutorials
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Tutorials on various programming languages.</p>
-                </article>
+            <div class="category-content" id="programming" role="tabpanel" aria-labelledby="programming-tab">
+                <!-- Content loaded dynamically -->
             </div>
 
             <!-- Game Dev -->
-            <div class="category-content" id="game-dev">
-                <article class="resource-card">
-                    <h3>Foundation Game Design with HTML5 and JavaScript</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">Book</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.amazon.com/Foundation-Game-Design-HTML5-JavaScript/dp/1430247169" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Amazon Book Page
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Guide to 2D game design with HTML5 and JS.</p>
-                </article>
+            <div class="category-content" id="game-dev" role="tabpanel" aria-labelledby="game-dev-tab">
+                <!-- Content loaded dynamically -->
             </div>
 
             <!-- Topics -->
-            <div class="category-content" id="topics">
-                <article class="resource-card">
-                    <h3>Creepypasta</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Search</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/results?search_query=creepypasta" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        Creepypasta YouTube Search
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Horror fiction videos from internet culture.</p>
-                </article>
-                <article class="resource-card">
-                    <h3>True Crime</h3>
-                    <div class="resource-meta">
-                        <span class="resource-type">YouTube Search</span>
-                        <span class="resource-rating">★★★★★</span>
-                    </div>
-                    <a href="https://www.youtube.com/results?search_query=true+crime" target="_blank" rel="noopener noreferrer" class="resource-link">
-                        True Crime YouTube Search
-                        <span class="external-indicator">⤴</span>
-                    </a>
-                    <p class="resource-comment">Documentaries on real-life criminal cases.</p>
-                </article>
+            <div class="category-content" id="topics" role="tabpanel" aria-labelledby="topics-tab">
+                <!-- Content loaded dynamically -->
             </div>
         </div>
     </main>
@@ -292,9 +95,9 @@
         </div>
     </footer>
 
-    <div class="theme-switcher" onclick="toggleTheme()" aria-label="Toggle theme between light and dark mode">
-        <span id="theme-icon">🌓</span>
-    </div>
+    <button class="theme-switcher" onclick="toggleTheme()" aria-label="Toggle theme between light and dark mode">
+        <span id="theme-icon" aria-hidden="true">🌓</span>
+    </button>
 
     <script src="./script.js"></script>
 </body>
