--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <header>
-        <div class="support-bar">
-            <a href="https://www.amazon.com" target="_blank">Support Me While You Shop</a>
-            <a href="https://ko-fi.com" target="_blank">Ko-Fi</a>
-            <a href="https://www.patreon.com" target="_blank">Patreon</a>
-        </div>
-    </header>
+    <div class="support-bar">
+        <span>Support me:</span>
+        <a href="YOUR_AFFILIATE_LINK" target="_blank">
+            <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" style="width: 120px; height: auto;">
+        </a>
+        <a href="https://ko-fi.com/YOUR_KOFI_USERNAME" target="_blank">
+            <img src="https://storage.ko-fi.com/cdn/brand/ko-fi-button.png" alt="Support me on Ko-Fi" style="width: 120px; height: auto;">
+        </a>
+        <a href="https://www.patreon.com/YOUR_PATRON_USERNAME" target="_blank">
+            <img src="https://c5.patreon.com/external/logo/white.png" alt="Support me on Patreon" style="width: 120px; height: auto;">
+        </a>
+    </div>
+</header>
     <main>
     <h1>Welcome to Dean's List</h1>
 
