--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="YOUR_AFFILIATE_LINK" target="_blank">
             <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" style="width: 120px; height: auto;">
         </a>
-        <a href="https://ko-fi.com/YOUR_KOFI_USERNAME" target="_blank">
+        <a href="https://ko-fi.com/deanslist" target="_blank">
             <img src="https://storage.ko-fi.com/cdn/brand/ko-fi-button.png" alt="Support me on Ko-Fi" style="width: 120px; height: auto;">
         </a>
         <a href="https://www.patreon.com/YOUR_PATRON_USERNAME" target="_blank">
