--- a/index.html
+++ b/index.html
@@ -8,93 +8,101 @@
 </head>
 <body>
     <header>
-    <div class="support-bar">
-        <span>Support me:</span>
-        <a href="YOUR_AFFILIATE_LINK" target="_blank">
-            <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" style="width: 120px; height: auto;">
-        </a>
-        <a href="https://patreon.com/user?u=102886" target="_blank">
-            <img src="https://c5.patreon.com/external/logo/white.png" alt="Support me on Patreon" style="width: 120px; height: auto;">
-        </a>
-    </div>
-</header>
+        <div class="support-bar">
+            <span>Support me:</span>
+            <a href="YOUR_AFFILIATE_LINK" target="_blank">
+                <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" style="width: 120px; height: auto;">
+            </a>
+            <a href="https://patreon.com/user?u=102886" target="_blank">
+                <img src="https://c5.patreon.com/external/logo/white.png" alt="Support me on Patreon" style="width: 120px; height: auto;">
+            </a>
+        </div>
+    </header>
     <main>
-    <h1>Welcome to Dean's List</h1>
+        <h1>Welcome to Dean's List</h1>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Opinion Pieces</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/c/Hbomberguy" target="_blank">Hbomberguy</a> - In-depth video essays critiquing media and culture.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Opinion Pieces</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/c/Hbomberguy" target="_blank">Hbomberguy</a> - In-depth video essays critiquing media and culture.</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Software</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/c/t3dotgg" target="_blank">t3dotgg Theo</a> - Insights on web development and the T3 stack.</li>
-                <li><a href="https://www.youtube.com/c/ThePrimeagen" target="_blank">ThePrimeagen</a> - Programming tutorials focusing on Vim and TypeScript.</li>
-                <li><a href="https://www.youtube.com/c/FunFunFunction" target="_blank">Funfunfunction MPJ</a> - Engaging JavaScript and functional programming content.</li>
-                <li><a href="https://www.youtube.com/c/Methmethmethod" target="_blank">Methmethmethod</a> - JavaScript and web development tutorials.</li>
-                <li><a href="https://www.youtube.com/c/TheCodingTrain" target="_blank">TheCodingTrain Daniel Shiffman</a> - Creative coding tutorials with p5.js.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Software</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/c/t3dotgg" target="_blank">t3dotgg Theo</a> - Insights on web development and the T3 stack.</li>
+                    <li><a href="https://www.youtube.com/c/ThePrimeagen" target="_blank">ThePrimeagen</a> - Programming tutorials focusing on Vim and TypeScript.</li>
+                    <li><a href="https://www.youtube.com/c/FunFunFunction" target="_blank">Funfunfunction MPJ</a> - Engaging JavaScript and functional programming content.</li>
+                    <li><a href="https://www.youtube.com/c/Methmethmethod" target="_blank">Methmethmethod</a> - JavaScript and web development tutorials.</li>
+                    <li><a href="https://www.youtube.com/c/TheCodingTrain" target="_blank">TheCodingTrain Daniel Shiffman</a> - Creative coding tutorials with p5.js.</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Crypto</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/results?search_query=What+is+Bitcoin" target="_blank">What is Bitcoin?</a> - Overview of Bitcoin and its significance.</li>
-                <li><a href="https://www.youtube.com/results?search_query=What+is+Ethereum" target="_blank">What is Ethereum?</a> - Introduction to Ethereum and smart contracts.</li>
-                <li><a href="https://www.youtube.com/results?search_query=SHIB" target="_blank">SHIB</a> - Information about the Shiba Inu cryptocurrency.</li>
-                <li><a href="https://www.youtube.com/results?search_query=Vitalik+Buterin" target="_blank">Vitalik Buterin</a> - Insights from the co-founder of Ethereum.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Crypto</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/results?search_query=What+is+Bitcoin" target="_blank">What is Bitcoin?</a> - Overview of Bitcoin and its significance.</li>
+                    <li><a href="https://www.youtube.com/results?search_query=What+is+Ethereum" target="_blank">What is Ethereum?</a> - Introduction to Ethereum and smart contracts.</li>
+                    <li><a href="https://www.youtube.com/results?search_query=SHIB" target="_blank">SHIB</a> - Information about the Shiba Inu cryptocurrency.</li>
+                    <li><a href="https://www.youtube.com/results?search_query=Vitalik+Buterin" target="_blank">Vitalik Buterin</a> - Insights from the co-founder of Ethereum.</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Programming</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/c/ChiliTomatoNoodle" target="_blank">ChiliTomatoNoodle</a> - Programming tutorials and insights.</li>
-                <li><a href="https://www.youtube.com/c/ThinMatrix" target="_blank">ThinMatrix</a> - Game development tutorials using Java.</li>
-                <li><a href="https://www.youtube.com/c/DerekBanas" target="_blank">DerekBanas</a> - Comprehensive programming tutorials.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Programming</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/c/ChiliTomatoNoodle" target="_blank">ChiliTomatoNoodle</a> - Programming tutorials and insights.</li>
+                    <li><a href="https://www.youtube.com/c/ThinMatrix" target="_blank">ThinMatrix</a> - Game development tutorials using Java.</li>
+                    <li><a href="https://www.youtube.com/c/DerekBanas" target="_blank">DerekBanas</a> - Comprehensive programming tutorials.</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Game Dev</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/results?search_query=Foundation+Game+Design+with+HTML5+and+JavaScript+Rex+van+der+Spuy" target="_blank">Foundation Game Design with HTML5 and JavaScript</a> - Course by Rex van der Spuy.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Game Dev</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/results?search_query=Foundation+Game+Design+with+HTML5+and+JavaScript+Rex+van+der+Spuy" target="_blank">Foundation Game Design with HTML5 and JavaScript</a> - Course by Rex van der Spuy.</li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <div class="category">
-        <h2 class="category-title" onclick="toggleCategory(this)">Topics</h2>
-        <div class="category-content">
-            <ul>
-                <li><a href="https://www.youtube.com/results?search_query=Creepypasta" target="_blank">Creepypasta</a> - Explore the world of creepypasta stories.</li>
-                <li><a href="https://www.youtube.com/results?search_query=True+Crime" target="_blank">True Crime</a> - Delve into true crime stories and documentaries.</li>
-            </ul>
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Topics</h2>
+            <div class="category-content">
+                <ul>
+                    <li><a href="https://www.youtube.com/results?search_query=Creepypasta" target="_blank">Creepypasta</a> - Explore the world of creepypasta stories.</li>
+                    <li><a href="https://www.youtube.com/results?search_query=True+Crime" target="_blank">True Crime</a> - Delve into true crime stories and documentaries.</li>
+                </ul>
+            </div>
         </div>
-    </div>
-</main>
+    </main>
+
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2023 Dean's List. All rights reserved.</p>
+            <p>Hosted on <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.</p>
+        </div>
+        <div class="footer-space"></div> <!-- Empty space for Ko-Fi widget -->
+    </footer>
 
     <script src="script.js"></script>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<script>
-  kofiWidgetOverlay.draw('deanslist', {
-    'type': 'floating-chat',
-    'floating-chat.donateButton.text': 'Support me',
-    'floating-chat.donateButton.background-color': '#00b9fe',
-    'floating-chat.donateButton.text-color': '#fff'
-  });
-</script>
+    <script>
+      kofiWidgetOverlay.draw('deanslist', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Support me',
+        'floating-chat.donateButton.background-color': '#00b9fe',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
 </body>
 </html>
