--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
             </div>
         </div>
 
+<div class="category">
+    <h2 class="category-title" onclick="toggleCategory(this)">Dr. Petter's Software</h2>
+    <div class="category-content">
+        <p>Dr. Petter is a talented developer known for creating tools that enhance game development and sound design. Here are some of his notable contributions:</p>
+        <ul>
+            <li>
+                <a href="https://drpetter.se/project/musagi/" target="_blank">Musagi</a> - A music composition tool for creating chiptune music with a tracker-style interface. Perfect for game developers looking to add unique soundtracks to their projects.
+            </li>
+            <li>
+                <a href="https://drpetter.se/project/sfxr/" target="_blank">SFXR</a> - A simple sound effects generator that allows users to create retro-style sound effects quickly and easily. Ideal for indie game developers.
+            </li>
+            <li>
+                <a href="https://drpetter.se/project/sfxtreme/" target="_blank">SFXTreme</a> - An advanced version of SFXR that offers more features and customization options for sound effect generation.
+            </li>
+            <li>
+                <a href="https://drpetter.se/project/sculptris/" target="_blank">Sculptris</a> - A digital sculpting tool that allows users to create 3D models in an intuitive and easy-to-use environment, making it accessible for artists and game developers alike.
+            </li>
+        </ul>
+    </div>
+</div>
+
+        
         <div class="category">
             <h2 class="category-title" onclick="toggleCategory(this)">Crypto</h2>
             <div class="category-content">
