--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <div class="support-bar">
             <span>Support me:</span>
             <a href="YOUR_AFFILIATE_LINK" target="_blank">
-                <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon" style="width: 120px; height: auto;">
+                <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png" alt="Support me on Amazon">
             </a>
             <a href="https://patreon.com/user?u=102886" target="_blank">
-                <img src="https://c5.patreon.com/external/logo/white.png" alt="Support me on Patreon" style="width: 120px; height: auto;">
+                <img src="https://c5.patreon.com/external/logo/white.png" alt="Support me on Patreon">
             </a>
         </div>
     </header>
@@ -43,27 +43,26 @@
             </div>
         </div>
 
-<div class="category">
-    <h2 class="category-title" onclick="toggleCategory(this)">Dr. Petter's Software</h2>
-    <div class="category-content">
-        <p>Dr. Petter is a talented developer known for creating tools that enhance game development and sound design. Here are some of his notable contributions:</p>
-        <ul>
-            <li>
-                <a href="https://drpetter.se/project/musagi/" target="_blank">Musagi</a> - A music composition tool for creating chiptune music with a tracker-style interface. Perfect for game developers looking to add unique soundtracks to their projects.
-            </li>
-            <li>
-                <a href="https://drpetter.se/project/sfxr/" target="_blank">SFXR</a> - A simple sound effects generator that allows users to create retro-style sound effects quickly and easily. Ideal for indie game developers.
-            </li>
-            <li>
-                <a href="https://drpetter.se/project/sfxtreme/" target="_blank">SFXTreme</a> - An advanced version of SFXR that offers more features and customization options for sound effect generation.
-            </li>
-            <li>
-                <a href="https://drpetter.se/project/sculptris/" target="_blank">Sculptris</a> - A digital sculpting tool that allows users to create 3D models in an intuitive and easy-to-use environment, making it accessible for artists and game developers alike.
-            </li>
-        </ul>
-    </div>
-</div>
-
+        <div class="category">
+            <h2 class="category-title" onclick="toggleCategory(this)">Dr. Petter's Software</h2>
+            <div class="category-content">
+                <p>Dr. Petter is a talented developer known for creating tools that enhance game development and sound design. Here are some of his notable contributions:</p>
+                <ul>
+                    <li>
+                        <a href="https://drpetter.se/project/musagi/" target="_blank">Musagi</a> - A music composition tool for creating chiptune music with a tracker-style interface. Perfect for game developers looking to add unique soundtracks to their projects.
+                    </li>
+                    <li>
+                        <a href="https://drpetter.se/project/sfxr/" target="_blank">SFXR</a> - A simple sound effects generator that allows users to create retro-style sound effects quickly and easily. Ideal for indie game developers.
+                    </li>
+                    <li>
+                        <a href="https://drpetter.se/project/sfxtreme/" target="_blank">SFXTreme</a> - An advanced version of SFXR that offers more features and customization options for sound effect generation.
+                    </li>
+                    <li>
+                        <a href="https://drpetter.se/project/sculptris/" target="_blank">Sculptris</a> - A digital sculpting tool that allows users to create 3D models in an intuitive and easy-to-use environment, making it accessible for artists and game developers alike.
+                    </li>
+                </ul>
+            </div>
+        </div>
         
         <div class="category">
             <h2 class="category-title" onclick="toggleCategory(this)">Crypto</h2>
@@ -92,7 +91,7 @@
             <h2 class="category-title" onclick="toggleCategory(this)">Game Dev</h2>
             <div class="category-content">
                 <ul>
-                    <li><a href="https://www.youtube.com/results?search_query=Foundation+Game+Design+with+HTML5+and+JavaScript+Rex+van+der+Spuy" target="_blank">Foundation Game Design with HTML5 and JavaScript</a> - Course by Rex van der Spuy.</li>
+                    <li><a href="https://www.youtube.com/results?search_query=Foundation+Game+Design+with+HTML5+and+JavaScript+Rex+van+der_Spuy" target="_blank">Foundation Game Design with HTML5 and JavaScript</a> - Course by Rex van der Spuy.</li>
                 </ul>
             </div>
         </div>
@@ -119,12 +118,12 @@
     <script src="script.js"></script>
     <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
     <script>
-      kofiWidgetOverlay.draw('deanslist', {
-        'type': 'floating-chat',
-        'floating-chat.donateButton.text': 'Support me',
-        'floating-chat.donateButton.background-color': '#00b9fe',
-        'floating-chat.donateButton.text-color': '#fff'
-      });
+        kofiWidgetOverlay.draw('deanslist', {
+            'type': 'floating-chat',
+            'floating-chat.donateButton.text': 'Support me',
+            'floating-chat.donateButton.background-color': '#00b9fe',
+            'floating-chat.donateButton.text-color': '#fff'
+        });
     </script>
 </body>
 </html>
