--- a/index.html
+++ b/index.html
@@ -19,93 +19,24 @@
         </div>
     </header>
     <main>
-        <h1>Welcome to Dean's List</h1>
+    <h1>Welcome to Dean's List</h1>
+    
+    <div class="interests-container">
+        <a href="#" class="interest-bubble" data-category="Opinion Pieces">Opinion Pieces</a>
+        <a href="#" class="interest-bubble" data-category="Software">Software</a>
+        <a href="#" class="interest-bubble" data-category="Dr. Petter's Software">Dr. Petter's Software</a>
+        <a href="#" class="interest-bubble" data-category="Crypto">Crypto</a>
+        <a href="#" class="interest-bubble" data-category="Programming">Programming</a>
+        <a href="#" class="interest-bubble" data-category="Game Dev">Game Dev</a>
+        <a href="#" class="interest-bubble" data-category="Topics">Topics</a>
+        <!-- Add more interests as needed -->
+    </div>
 
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Opinion Pieces</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/c/Hbomberguy" target="_blank">Hbomberguy</a> - In-depth video essays critiquing media and culture.</li>
-                </ul>
-            </div>
-        </div>
+    <div id="content-area">
+        <!-- The content for the selected category will appear here -->
+    </div>
+</main>
 
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Software</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/c/t3dotgg" target="_blank">t3dotgg Theo</a> - Insights on web development and the T3 stack.</li>
-                    <li><a href="https://www.youtube.com/c/ThePrimeagen" target="_blank">ThePrimeagen</a> - Programming tutorials focusing on Vim and TypeScript.</li>
-                    <li><a href="https://www.youtube.com/c/FunFunFunction" target="_blank">Funfunfunction MPJ</a> - Engaging JavaScript and functional programming content.</li>
-                    <li><a href="https://www.youtube.com/c/Methmethmethod" target="_blank">Methmethmethod</a> - JavaScript and web development tutorials.</li>
-                    <li><a href="https://www.youtube.com/c/TheCodingTrain" target="_blank">TheCodingTrain Daniel Shiffman</a> - Creative coding tutorials with p5.js.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Dr. Petter's Software</h2>
-            <div class="category-content">
-                <p>Dr. Petter is a talented developer known for creating tools that enhance game development and sound design. Here are some of his notable contributions:</p>
-                <ul>
-                    <li>
-                        <a href="https://drpetter.se/project/musagi/" target="_blank">Musagi</a> - A music composition tool for creating chiptune music with a tracker-style interface. Perfect for game developers looking to add unique soundtracks to their projects.
-                    </li>
-                    <li>
-                        <a href="https://drpetter.se/project/sfxr/" target="_blank">SFXR</a> - A simple sound effects generator that allows users to create retro-style sound effects quickly and easily. Ideal for indie game developers.
-                    </li>
-                    <li>
-                        <a href="https://drpetter.se/project/sfxtreme/" target="_blank">SFXTreme</a> - An advanced version of SFXR that offers more features and customization options for sound effect generation.
-                    </li>
-                    <li>
-                        <a href="https://drpetter.se/project/sculptris/" target="_blank">Sculptris</a> - A digital sculpting tool that allows users to create 3D models in an intuitive and easy-to-use environment, making it accessible for artists and game developers alike.
-                    </li>
-                </ul>
-            </div>
-        </div>
-        
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Crypto</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/results?search_query=What+is+Bitcoin" target="_blank">What is Bitcoin?</a> - Overview of Bitcoin and its significance.</li>
-                    <li><a href="https://www.youtube.com/results?search_query=What+is+Ethereum" target="_blank">What is Ethereum?</a> - Introduction to Ethereum and smart contracts.</li>
-                    <li><a href="https://www.youtube.com/results?search_query=SHIB" target="_blank">SHIB</a> - Information about the Shiba Inu cryptocurrency.</li>
-                    <li><a href="https://www.youtube.com/results?search_query=Vitalik+Buterin" target="_blank">Vitalik Buterin</a> - Insights from the co-founder of Ethereum.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Programming</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/c/ChiliTomatoNoodle" target="_blank">ChiliTomatoNoodle</a> - Programming tutorials and insights.</li>
-                    <li><a href="https://www.youtube.com/c/ThinMatrix" target="_blank">ThinMatrix</a> - Game development tutorials using Java.</li>
-                    <li><a href="https://www.youtube.com/c/DerekBanas" target="_blank">DerekBanas</a> - Comprehensive programming tutorials.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Game Dev</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/results?search_query=Foundation+Game+Design+with+HTML5+and+JavaScript+Rex+van+der_Spuy" target="_blank">Foundation Game Design with HTML5 and JavaScript</a> - Course by Rex van der Spuy.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="category">
-            <h2 class="category-title" onclick="toggleCategory(this)">Topics</h2>
-            <div class="category-content">
-                <ul>
-                    <li><a href="https://www.youtube.com/results?search_query=Creepypasta" target="_blank">Creepypasta</a> - Explore the world of creepypasta stories.</li>
-                    <li><a href="https://www.youtube.com/results?search_query=True+Crime" target="_blank">True Crime</a> - Delve into true crime stories and documentaries.</li>
-                </ul>
-            </div>
-        </div>
-    </main>
 
     <footer>
         <div class="footer-content">
