--- a/index.html
+++ b/index.html
@@ -15,16 +15,11 @@
   <header class="bg-gray-800 text-white py-6 shadow-md">
     <div class="container mx-auto flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6">
       <span class="font-semibold">Support me:</span>
-      <a href="YOUR_AFFILIATE_LINK" target="_blank" class="transition transform hover:scale-105">
-        <img src="https://images-na.ssl-images-amazon.com/images/G/01/x-locale/common/images/amazon-logo.png"
-             alt="Support me on Amazon"
-             class="w-28 rounded" />
-      </a>
-      <a href="https://patreon.com/user?u=102886" target="_blank" class="transition transform hover:scale-105">
-        <img src="https://c5.patreon.com/external/logo/white.png"
-             alt="Support me on Patreon"
-             class="w-28 rounded" />
-      </a>
+      <a href="https://patreon.com/user?u=102886" target="_blank" 
+   class="inline-block px-6 py-2 bg-[#f96854] text-white font-semibold rounded-md shadow-md transition-all hover:bg-[#f7433d]">
+  Support me on Patreon
+</a>
+
     </div>
   </header>
 
